--- a/src/components/App.css
+++ b/src/components/App.css
@@ -38,38 +38,63 @@
   }
 }
 
+
+
 .flex-container {
   display: flex;
-  background-color: DodgerBlue;
+  background-color: rgb(0, 0, 0);
   height: 100vh;
 }
 
 .flex-container > div {
-  background-color: #f1f1f1;
+  background-color: rgb(194, 160, 160);
+  border-radius: 5%;
   margin: 10px;
-  padding: 10px;
+  padding: 3vh 3vw;
   font-size: 30px;
   width: 100%;
-  max-width: 45%;
-  height: 80%;
+  max-width: 50%;
+  height: 90%;
   display: flex;
   flex-direction: column;
  
 }
 
+.flex-container button{
+  font-size: 1.01rem;
+  margin: 10px;
+  padding: 5px 10px;
+  color: black;
+  border: 1px solid white;
+  border-radius: 5px;
+}
+
 .output {
   border: #282c34;
   background-color:whitesmoke;
-  border-radius: 5px;
-  border-width: 2px;
+  /* border-radius: 5px; */
+  /* border-width: 2px; */
   overflow-y: auto;
+  /* height:87%; */
 }
+/* .output button{
+  font-size: 1.01rem;
+  margin: 10px;
+  padding: 5px 10px;
+  color: black;
+  border: 1px solid white;
+  border-radius: 5px;
+} */
 
 .json-input {
   max-width: 98%;
   min-width: 98%;
-  max-height: 90%;
-  min-height: 90%;
+  max-height: 85%;
+  min-height: 87%;
+  font-size: 1.01rem;
+  color: green;
+  
+  
 }
 
 .tooltip {
